objects/tffa__Liability__c.object
<CustomObject>
    <description>A liability is defined as a individual&apos;s or company&apos;s legal financial debts or obligations that arise during the course of business operations.</description>
    <fields>
        <fullName>tffa__AccountNumber__c</fullName>
        <description>A unique alphanumeric string identifying the liability. This is typically the account Number of the loan or line of credit representing this customer liability</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Asset object if current liability record is being captured against current Asset</description>
        <label>Asset</label>
        <referenceTo>tffa__Asset__c</referenceTo>
        <relationshipLabel>Liabilities</relationshipLabel>
        <relationshipName>Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount balance of the account</description>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__CreditLimit__c</fullName>
        <description>The maximum dollar amount of credit available to the borrower on a Home Equity Line of Credit (HELOC) regardless of whether the borrower has accessed the amount.</description>
        <label>Credit limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Creditor__c</fullName>
        <description>The name of the company to which the liability is owed. For example if the liability is of type Real Estate Loan, the name of the bank where the mortgage is taken. Incase of an auto loan, the lender who provided financing for the automobile.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Creditor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__InterestRate__c</fullName>
        <description>Interest rate for the loan. In case of credit card it could also store APR</description>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsExcludedFromAssetReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the this asset needs to be excluded from Plaid Asset Report.</description>
        <label>Is Exclude From Asset Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsOverDue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this liability is over due</description>
        <label>Is over due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsPaidOff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this liability has been settled</description>
        <label>Is paid off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaskedAccountNumber__c</fullName>
        <description>Last 4 digits of account numner for display purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MaturityDate__c</fullName>
        <description>The maturity date of a Certificate or Lending accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Maturity date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyPayment__c</fullName>
        <description>The expected monthly outgoing to service this liability.</description>
        <label>Monthly payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MortgageType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the private or public sector entity under whose guidelines the mortgage is originated.</description>
        <label>Mortgage type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MortgageType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OutstandingBalance__c</fullName>
        <description>The outstanding principal amount on the loan or liability.</description>
        <label>Outstanding balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to parent party object</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Liabilities</relationshipLabel>
        <relationshipName>Liabilities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__PayoffStatusIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the liability will be paid off at or before closing.</description>
        <label>Payoff status indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>Different product category supported by system. This classifies the flow of account opening , the underlying data model and the servicing components about an account.</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCode__c</fullName>
        <description>Unique product code maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProductName__c</fullName>
        <description>Product name provided by core banking</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__PurchaseProperty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Purchase Property object if current liability record is being captured against property</description>
        <label>Purchase Property</label>
        <referenceTo>tffa__PurchaseProperty__c</referenceTo>
        <relationshipLabel>Liabilities</relationshipLabel>
        <relationshipName>Liabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__RemainingTerm__c</fullName>
        <description>Indicates the term (months) left to completely pay off the current liability.</description>
        <label>Remaining term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this liability if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>The type of the liability like Automobile Loan,Real Estate Loan,Revolving Charge Accounts,Alimony/Child Support etc.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__NatureOfLiability</valueSetName>
        </valueSet>
    </fields>
    <label>Liability</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Liability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Liabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>